tests/paczka1/fuzzy1/46546938.err
Error in line 22: vnWxlg A969 171,9
Error in line 18: AF5 S349 0,0
